# helium-positioning-api

./: .cookiecutter.json  .env.sample  .flake8  .gitignore  .gitlab-ci.yml  .gitpod.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  helium_api_wrapper-0.0.0-py3-none-any.whl  noxfile.py  poetry.toml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: docker-build.yml
.github/workflows/: constraints.txt  docker-build.yml  release.yml  tests.yml
docs/: Makefile  conf.py  index.md  index.rst  make.bat  reference.md  requirements.txt  usage.md
docs/source/: conf.py  helium_positioning_api.rst  index.md  reference.rst  usage.rst
models/: gradient_boosting.joblib  linear_regression.joblib  preprocessor.joblib
notebooks/: 1.0-fk-initial-eda.ipynb  helium_positioning_demo.ipynb
src/: __init__.py
src.egg-info/: PKG-INFO  SOURCES.txt
src/helium_api_wrapper/: DataObjects.py  ResultHandler.py  __init__.py  __main__.py  challenges.py  devices.py  endpoint.py  hotspots.py
src/helium_positioning_api/: DataObjects.py  Models.py  __init__.py  __main__.py  api.py  auxilary.py  distance_prediction.py  midpoint.py  nearest_neighbor.py  todos.txt  triangulation.py  trilateration.py
src/helium_positioning_api/models/: 2706_RMSE_NeuralNetwork  2737_RMSE_GradientBoostingRegressor  2760_RMSE_RandomForestRegressor_PCA_RandomizedSearchCV  2773_RMSE_LinearRegression_PolynomialFeatures  2813_RMSE_RandomForestRegressor_GridSearchCV  2972_RMSE_RandomForestRegressor_RandomizedSearchCV  3011_RMSE_LinearRegression_FunctionTransformer  3106_RMSE_LinearRegression  gradient_boosting.joblib
tests/: __init__.py  test_models.py
tests/data/: events.json  hotspots.json  integration.json  integration_events.json  transaction_hotspots.json
