[tool.poetry]
name = "helium-positioning-api"
version = "0.0.1"
description = "Helium Positioning API"
authors = ["Lukas Huber <lukas.huber@fh-kufstein.ac.at>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/emergotechnologies/helium-positioning-api"
repository = "https://github.com/emergotechnologies/helium-positioning-api"
documentation = "https://helium-positioning-api.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/emergotechnologies/helium-positioning-apireleases"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.1"
pydantic = "^1.10.2"
uvicorn = "^0.19.0"
fastapi = "^0.87.0"
pytest-mock = "^3.10.0"
utm = "^0.7.0"
haversine = "^2.7.0"
python-dotenv = "^0.21.1"
pandas = "^1.5.3"
joblib = "^1.2.0"
scikit-learn = "^1.2.1"
helium-api-wrapper = "^0.0.1.dev1675239484"


[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
nox-poetry = "^1.0.1"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=7.2.0"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = "^4.4.0"
sphinx-rtd-theme = "^1.1.1"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}


[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["helium_positioning_api", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
